fixed CustomGlobalExceptionHandler